syntax = "proto3";

//import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
//import "google/protobuf/wrappers.proto";

package event_proto;
option go_package = "grpc/event_proto";

service EventService {
  rpc Create(CreateEventRequest) returns (Event);
  rpc List(ListEventsRequest) returns (Events);
}
message CreateEventRequest {
  int64 campaign_id = 1;
  int64 insertion_id = 2;
  int64 publisher_id = 3;
}
message ListEventsRequest {
  int64 page_size = 1;
  int64 page_number = 2;
}
message Event {
  int64 id = 1;
  int64 campaign_id = 2;
  int64 insertion_id = 3;
  int64 publisher_id = 4;
  google.protobuf.Timestamp created_at = 5;
}
message Events {
  repeated Event events = 1;
}
